// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationRepositories renders with a repository 1`] = `
<OrganizationRepositories
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  itemList={
    Array [
      Object {
        "externalSlug": "example/repo-name",
        "id": "4",
        "name": "example/repo-name",
        "provider": "github",
        "status": "active",
        "url": "https://github.com/example/repo-name",
      },
    ]
  }
  params={
    Object {
      "orgId": "org-slug",
    }
  }
  repoConfig={
    Object {
      "providers": Array [
        Object {
          "config": Array [
            Object {
              "help": "Enter your repository name, in the form <github-org/repo-name>.",
              "label": "Repository Name",
              "name": "name",
              "placeholder": "e.g. getsentry/sentry",
              "required": true,
              "type": "text",
            },
          ],
          "id": "github",
          "key": "github",
          "name": "GitHub",
        },
      ],
    }
  }
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Repositories"
    >
      <SettingsPageHeading
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        noTitleStyles={false}
        title="Repositories"
      >
        <div
          className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        >
          <TitleAndActions>
            <div
              className="css-ifzfc5-TitleAndActions e1uay4fd0"
            >
              <Title
                styled={false}
              >
                <div
                  className="css-u2ls9d-Title e1uay4fd1"
                >
                  <HeaderTitle>
                    <h4
                      className="css-1bosio6-HeaderTitle eqkydle2"
                    >
                      Repositories
                    </h4>
                  </HeaderTitle>
                </div>
              </Title>
            </div>
          </TitleAndActions>
        </div>
      </SettingsPageHeading>
    </StyledSettingsPageHeading>
    <AlertLink
      openInNewTab={false}
      priority="warning"
      size="normal"
      to="/settings/org-slug/integrations/"
      withoutMarginBottom={false}
    >
      <StyledLink
        openInNewTab={false}
        priority="warning"
        size="normal"
        to="/settings/org-slug/integrations/"
        withoutMarginBottom={false}
      >
        <Component
          className="css-1bza080-StyledLink e1ylhppg0"
          openInNewTab={false}
          priority="warning"
          size="normal"
          to="/settings/org-slug/integrations/"
          withoutMarginBottom={false}
        >
          <Link
            className="css-1bza080-StyledLink e1ylhppg0"
            to="/settings/org-slug/integrations/"
          >
            <Anchor
              className="css-1bza080-StyledLink e1ylhppg0"
              href="/settings/org-slug/integrations/"
            >
              <a
                className="e1ylhppg0 css-1ku03mk-Anchor-StyledLink e18jdd0v0"
                href="/settings/org-slug/integrations/"
              >
                <AlertLinkText>
                  <div
                    className="css-o9emef-AlertLinkText e1ylhppg3"
                  >
                    Want to add a repository to start tracking commits? Install or configure your version control integration here.
                  </div>
                </AlertLinkText>
                <IconLink>
                  <span
                    className="css-1nl5kog-IconWrapper-IconLink e1ylhppg2"
                  >
                    <IconChevron
                      direction="right"
                    >
                      <EmotionCssPropInternal
                        __EMOTION_LABEL_PLEASE_DO_NOT_USE__="IconChevron"
                        __EMOTION_TYPE_PLEASE_DO_NOT_USE__={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "propTypes": Object {
                              "color": [Function],
                              "size": [Function],
                              "viewBox": [Function],
                            },
                            "render": [Function],
                          }
                        }
                        css={
                          Object {
                            "map": undefined,
                            "name": "72rehw-IconChevron",
                            "next": undefined,
                            "styles": "transform:rotate(90deg);;label:IconChevron;",
                            "toString": [Function],
                          }
                        }
                      >
                        <ForwardRef(SvgIcon)
                          className="css-72rehw-IconChevron"
                        >
                          <svg
                            className="css-72rehw-IconChevron"
                            fill="currentColor"
                            height="16px"
                            viewBox="0 0 16 16"
                            width="16px"
                          >
                            <path
                              d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
                            />
                          </svg>
                        </ForwardRef(SvgIcon)>
                      </EmotionCssPropInternal>
                    </IconChevron>
                  </span>
                </IconLink>
              </a>
            </Anchor>
          </Link>
        </Component>
      </StyledLink>
    </AlertLink>
    <Panel>
      <Component
        className="css-ietoyz-Panel e119nu470"
      >
        <div
          className="css-ietoyz-Panel e119nu470"
        >
          <PanelHeader>
            <div
              className="css-pi486d-PanelHeader en8g1d30"
            >
              Added Repositories
            </div>
          </PanelHeader>
          <PanelBody
            flexible={false}
            withPadding={false}
          >
            <FlexBox
              withPadding={false}
            >
              <div
                className="css-1nto0rx-FlexBox e1vnwt6f0"
              >
                <div>
                  <RepositoryRow
                    api={
                      Client {
                        "_chain": [Function],
                        "_wrapRequest": [Function],
                        "bulkUpdate": [Function],
                        "handleRequestError": [Function],
                        "hasProjectBeenRenamed": [Function],
                      }
                    }
                    key="4"
                    orgId="org-slug"
                    repository={
                      Object {
                        "externalSlug": "example/repo-name",
                        "id": "4",
                        "name": "example/repo-name",
                        "provider": "github",
                        "status": "active",
                        "url": "https://github.com/example/repo-name",
                      }
                    }
                    showProvider={true}
                  >
                    <WithOrganizationMockWrapper
                      access={
                        Array [
                          "org:integrations",
                        ]
                      }
                    >
                      <withConfig(Access)
                        access={
                          Array [
                            "org:integrations",
                          ]
                        }
                        organization={
                          Object {
                            "access": Array [
                              "org:read",
                              "org:write",
                              "org:admin",
                              "org:integrations",
                              "project:read",
                              "project:write",
                              "project:admin",
                              "team:read",
                              "team:write",
                              "team:admin",
                            ],
                            "experiments": Object {},
                            "features": Array [],
                            "id": "3",
                            "name": "Organization Name",
                            "onboardingTasks": Array [],
                            "projects": Array [],
                            "scrapeJavaScript": true,
                            "slug": "org-slug",
                            "status": Object {
                              "id": "active",
                              "name": "active",
                            },
                            "teams": Array [],
                          }
                        }
                      >
                        <Access
                          access={
                            Array [
                              "org:integrations",
                            ]
                          }
                          config={
                            Object {
                              "features": Set {},
                              "messages": Array [],
                              "user": Object {
                                "email": "foo@example.com",
                                "flags": Object {
                                  "newsletter_consent_prompt": false,
                                },
                                "hasPasswordAuth": true,
                                "id": "1",
                                "isAuthenticated": true,
                                "name": "Foo Bar",
                                "options": Object {
                                  "timezone": "UTC",
                                },
                                "permissions": Set {},
                                "username": "foo@example.com",
                              },
                            }
                          }
                          isSuperuser={false}
                          organization={
                            Object {
                              "access": Array [
                                "org:read",
                                "org:write",
                                "org:admin",
                                "org:integrations",
                                "project:read",
                                "project:write",
                                "project:admin",
                                "team:read",
                                "team:write",
                                "team:admin",
                              ],
                              "experiments": Object {},
                              "features": Array [],
                              "id": "3",
                              "name": "Organization Name",
                              "onboardingTasks": Array [],
                              "projects": Array [],
                              "scrapeJavaScript": true,
                              "slug": "org-slug",
                              "status": Object {
                                "id": "active",
                                "name": "active",
                              },
                              "teams": Array [],
                            }
                          }
                          renderNoAccessMessage={false}
                          requireAll={true}
                        >
                          <StyledPanelItem
                            p={2}
                            status="active"
                          >
                            <div
                              className="css-o5ebmd-PanelItem-StyledPanelItem e1ymnanf0"
                            >
                              <RepositoryTitleAndUrl>
                                <div
                                  className="css-1k146mj-RepositoryTitleAndUrl e1ymnanf2"
                                >
                                  <RepositoryTitle>
                                    <div
                                      className="css-1ffmcel-RepositoryTitle e1ymnanf3"
                                    >
                                      <strong>
                                        example/repo-name
                                      </strong>
                                    </div>
                                  </RepositoryTitle>
                                  <div>
                                    <small />
                                    <span>
                                       — 
                                    </span>
                                    <small>
                                      <a
                                        href="https://github.com/example/repo-name"
                                      >
                                        github.com/example/repo-name
                                      </a>
                                    </small>
                                  </div>
                                </div>
                              </RepositoryTitleAndUrl>
                              <Tooltip
                                containerDisplayMode="inline-block"
                                disabled={true}
                                position="top"
                                title="You must be an organization owner, manager or admin to remove a repository."
                              >
                                <Confirm
                                  cancelText="Cancel"
                                  confirmText="Confirm"
                                  disableConfirmButton={false}
                                  disabled={false}
                                  message="Are you sure you want to remove this repository? All associated commit data will be removed in addition to the repository."
                                  onConfirm={[Function]}
                                  priority="primary"
                                  stopPropagation={false}
                                >
                                  <forwardRef<Button>
                                    disabled={false}
                                    icon={
                                      <ForwardRef(IconDelete)
                                        size="xs"
                                      />
                                    }
                                    label="delete"
                                    onClick={[Function]}
                                    size="xsmall"
                                  >
                                    <Button
                                      align="center"
                                      disabled={false}
                                      forwardRef={null}
                                      icon={
                                        <ForwardRef(IconDelete)
                                          size="xs"
                                        />
                                      }
                                      label="delete"
                                      onClick={[Function]}
                                      size="xsmall"
                                    >
                                      <StyledButton
                                        aria-disabled={false}
                                        aria-label="delete"
                                        disabled={false}
                                        forwardRef={null}
                                        onClick={[Function]}
                                        role="button"
                                        size="xsmall"
                                      >
                                        <Component
                                          aria-disabled={false}
                                          aria-label="delete"
                                          className="css-8od3q1-StyledButton edwq9my0"
                                          forwardRef={null}
                                          onClick={[Function]}
                                          role="button"
                                          size="xsmall"
                                        >
                                          <button
                                            aria-disabled={false}
                                            aria-label="delete"
                                            className="css-8od3q1-StyledButton edwq9my0"
                                            onClick={[Function]}
                                            role="button"
                                            size="xsmall"
                                          >
                                            <ButtonLabel
                                              align="center"
                                              size="xsmall"
                                            >
                                              <span
                                                className="css-1dw46ju-ButtonLabel edwq9my1"
                                              >
                                                <Icon
                                                  hasChildren={false}
                                                  size="xsmall"
                                                >
                                                  <span
                                                    className="css-dm7gfi-Icon edwq9my2"
                                                    size="xsmall"
                                                  >
                                                    <ForwardRef(IconDelete)
                                                      size="xs"
                                                    >
                                                      <ForwardRef(SvgIcon)
                                                        size="xs"
                                                      >
                                                        <svg
                                                          fill="currentColor"
                                                          height="12px"
                                                          viewBox="0 0 16 16"
                                                          width="12px"
                                                        >
                                                          <path
                                                            d="M14.71,3.94H1.29a.75.75,0,0,1,0-1.5H14.71a.75.75,0,0,1,0,1.5Z"
                                                          />
                                                          <path
                                                            d="M12.69,15.94H3.31a1.75,1.75,0,0,1-1.75-1.75v-11h1.5v11a.25.25,0,0,0,.25.25h9.38a.25.25,0,0,0,.25-.25v-11h1.5v11A1.75,1.75,0,0,1,12.69,15.94Z"
                                                          />
                                                          <path
                                                            d="M5,13a.74.74,0,0,1-.75-.75V6.14a.75.75,0,0,1,1.5,0v6.1A.75.75,0,0,1,5,13Z"
                                                          />
                                                          <path
                                                            d="M8,13a.75.75,0,0,1-.75-.75V6.14a.75.75,0,0,1,1.5,0v6.1A.75.75,0,0,1,8,13Z"
                                                          />
                                                          <path
                                                            d="M11.05,13a.75.75,0,0,1-.75-.75V6.14a.75.75,0,0,1,1.5,0v6.1A.74.74,0,0,1,11.05,13Z"
                                                          />
                                                          <path
                                                            d="M10.51,3.47l-.81-2H6.3l-.81,2L4.1,2.91,5,.77A1.26,1.26,0,0,1,6.13,0H9.87A1.26,1.26,0,0,1,11,.77l.87,2.14Z"
                                                          />
                                                        </svg>
                                                      </ForwardRef(SvgIcon)>
                                                    </ForwardRef(IconDelete)>
                                                  </span>
                                                </Icon>
                                              </span>
                                            </ButtonLabel>
                                          </button>
                                        </Component>
                                      </StyledButton>
                                    </Button>
                                  </forwardRef<Button>>
                                  <Modal
                                    animation={false}
                                    autoFocus={true}
                                    backdrop={true}
                                    bsClass="modal"
                                    dialogComponentClass={[Function]}
                                    enforceFocus={true}
                                    keyboard={true}
                                    manager={
                                      ModalManager {
                                        "add": [Function],
                                        "containers": Array [],
                                        "data": Array [],
                                        "handleContainerOverflow": true,
                                        "hideSiblingNodes": true,
                                        "isTopModal": [Function],
                                        "modals": Array [],
                                        "remove": [Function],
                                      }
                                    }
                                    onHide={[Function]}
                                    renderBackdrop={[Function]}
                                    restoreFocus={true}
                                    show={false}
                                  >
                                    <Modal
                                      autoFocus={true}
                                      backdrop={true}
                                      backdropClassName="modal-backdrop"
                                      containerClassName="modal-open"
                                      enforceFocus={true}
                                      keyboard={true}
                                      manager={
                                        ModalManager {
                                          "add": [Function],
                                          "containers": Array [],
                                          "data": Array [],
                                          "handleContainerOverflow": true,
                                          "hideSiblingNodes": true,
                                          "isTopModal": [Function],
                                          "modals": Array [],
                                          "remove": [Function],
                                        }
                                      }
                                      onEntering={[Function]}
                                      onExited={[Function]}
                                      onHide={[Function]}
                                      renderBackdrop={[Function]}
                                      restoreFocus={true}
                                      show={false}
                                    />
                                  </Modal>
                                </Confirm>
                              </Tooltip>
                            </div>
                          </StyledPanelItem>
                        </Access>
                      </withConfig(Access)>
                    </WithOrganizationMockWrapper>
                  </RepositoryRow>
                </div>
              </div>
            </FlexBox>
          </PanelBody>
        </div>
      </Component>
    </Panel>
  </div>
</OrganizationRepositories>
`;

exports[`OrganizationRepositories renders with github provider 1`] = `
<OrganizationRepositories
  itemList={Array []}
  params={
    Object {
      "orgId": "org-slug",
    }
  }
  repoConfig={
    Object {
      "providers": Array [
        Object {
          "config": Array [
            Object {
              "help": "Enter your repository name, in the form <github-org/repo-name>.",
              "label": "Repository Name",
              "name": "name",
              "placeholder": "e.g. getsentry/sentry",
              "required": true,
              "type": "text",
            },
          ],
          "id": "github",
          "key": "github",
          "name": "GitHub",
        },
      ],
    }
  }
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Repositories"
    >
      <SettingsPageHeading
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        noTitleStyles={false}
        title="Repositories"
      >
        <div
          className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        >
          <TitleAndActions>
            <div
              className="css-ifzfc5-TitleAndActions e1uay4fd0"
            >
              <Title
                styled={false}
              >
                <div
                  className="css-u2ls9d-Title e1uay4fd1"
                >
                  <HeaderTitle>
                    <h4
                      className="css-1bosio6-HeaderTitle eqkydle2"
                    >
                      Repositories
                    </h4>
                  </HeaderTitle>
                </div>
              </Title>
            </div>
          </TitleAndActions>
        </div>
      </SettingsPageHeading>
    </StyledSettingsPageHeading>
    <AlertLink
      openInNewTab={false}
      priority="warning"
      size="normal"
      to="/settings/org-slug/integrations/"
      withoutMarginBottom={false}
    >
      <StyledLink
        openInNewTab={false}
        priority="warning"
        size="normal"
        to="/settings/org-slug/integrations/"
        withoutMarginBottom={false}
      >
        <Component
          className="css-1bza080-StyledLink e1ylhppg0"
          openInNewTab={false}
          priority="warning"
          size="normal"
          to="/settings/org-slug/integrations/"
          withoutMarginBottom={false}
        >
          <Link
            className="css-1bza080-StyledLink e1ylhppg0"
            to="/settings/org-slug/integrations/"
          >
            <Anchor
              className="css-1bza080-StyledLink e1ylhppg0"
              href="/settings/org-slug/integrations/"
            >
              <a
                className="e1ylhppg0 css-1ku03mk-Anchor-StyledLink e18jdd0v0"
                href="/settings/org-slug/integrations/"
              >
                <AlertLinkText>
                  <div
                    className="css-o9emef-AlertLinkText e1ylhppg3"
                  >
                    Want to add a repository to start tracking commits? Install or configure your version control integration here.
                  </div>
                </AlertLinkText>
                <IconLink>
                  <span
                    className="css-1nl5kog-IconWrapper-IconLink e1ylhppg2"
                  >
                    <IconChevron
                      direction="right"
                    >
                      <EmotionCssPropInternal
                        __EMOTION_LABEL_PLEASE_DO_NOT_USE__="IconChevron"
                        __EMOTION_TYPE_PLEASE_DO_NOT_USE__={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "propTypes": Object {
                              "color": [Function],
                              "size": [Function],
                              "viewBox": [Function],
                            },
                            "render": [Function],
                          }
                        }
                        css={
                          Object {
                            "map": undefined,
                            "name": "72rehw-IconChevron",
                            "next": undefined,
                            "styles": "transform:rotate(90deg);;label:IconChevron;",
                            "toString": [Function],
                          }
                        }
                      >
                        <ForwardRef(SvgIcon)
                          className="css-72rehw-IconChevron"
                        >
                          <svg
                            className="css-72rehw-IconChevron"
                            fill="currentColor"
                            height="16px"
                            viewBox="0 0 16 16"
                            width="16px"
                          >
                            <path
                              d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
                            />
                          </svg>
                        </ForwardRef(SvgIcon)>
                      </EmotionCssPropInternal>
                    </IconChevron>
                  </span>
                </IconLink>
              </a>
            </Anchor>
          </Link>
        </Component>
      </StyledLink>
    </AlertLink>
    <div
      className="m-b-2"
    >
      <TextBlock>
        <div
          className="css-1j3tvli-TextBlock e1x1lar10"
        >
          Connecting a repository allows Sentry to capture commit data via webhooks. This enables features like suggested assignees and resolving issues via commit message. Once you've connected a repository, you can associate commits with releases via the API.
           
          <span
            key="5"
          >
            <span
              key="0"
            >
              See our 
            </span>
            <a
              href="https://docs.sentry.io/learn/releases/"
              key="2"
            >
              <span
                key="1"
              >
                documentation
              </span>
            </a>
            <span
              key="3"
            >
               for more details.
            </span>
          </span>
        </div>
      </TextBlock>
    </div>
    <Panel>
      <Component
        className="css-ietoyz-Panel e119nu470"
      >
        <div
          className="css-ietoyz-Panel e119nu470"
        >
          <EmptyMessage
            action={
              <ForwardRef
                href="https://docs.sentry.io/learn/releases/"
              >
                Learn more
              </ForwardRef>
            }
            description="Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message."
            icon={<ForwardRef(IconCommit) />}
            title="Sentry is better with commit data"
          >
            <Component
              action={
                <ForwardRef
                  href="https://docs.sentry.io/learn/releases/"
                >
                  Learn more
                </ForwardRef>
              }
              className="css-1qddu1g-EmptyMessage-EmptyMessage e1h3yfdx0"
              description="Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message."
              icon={<ForwardRef(IconCommit) />}
              title="Sentry is better with commit data"
            >
              <div
                className="css-1qddu1g-EmptyMessage-EmptyMessage e1h3yfdx0"
                data-test-id="empty-message"
              >
                <IconWrapper>
                  <div
                    className="css-oufmym-IconWrapper e1h3yfdx1"
                  >
                    <IconCommit>
                      <ForwardRef(SvgIcon)>
                        <svg
                          fill="currentColor"
                          height="16px"
                          viewBox="0 0 16 16"
                          width="16px"
                        >
                          <path
                            d="M8,11.91A3.91,3.91,0,1,1,11.91,8,3.91,3.91,0,0,1,8,11.91ZM8,5.59A2.41,2.41,0,1,0,10.41,8,2.41,2.41,0,0,0,8,5.59Z"
                          />
                          <path
                            d="M15.23,8.75H11.16a.75.75,0,0,1,0-1.5h4.07a.75.75,0,0,1,0,1.5Z"
                          />
                          <path
                            d="M4.84,8.75H.77a.75.75,0,1,1,0-1.5H4.84a.75.75,0,0,1,0,1.5Z"
                          />
                        </svg>
                      </ForwardRef(SvgIcon)>
                    </IconCommit>
                  </div>
                </IconWrapper>
                <Title>
                  <h1
                    className="css-1ybq3tl-Title e1h3yfdx2"
                  >
                    Sentry is better with commit data
                  </h1>
                </Title>
                <Description>
                  <div
                    className="css-1olcd3h-TextBlock-Description e1h3yfdx3"
                  >
                    Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
                  </div>
                </Description>
                <Action>
                  <div
                    className="css-1li1qzt-Action e1h3yfdx4"
                  >
                    <forwardRef<Button>
                      href="https://docs.sentry.io/learn/releases/"
                    >
                      <Button
                        align="center"
                        disabled={false}
                        forwardRef={null}
                        href="https://docs.sentry.io/learn/releases/"
                      >
                        <StyledButton
                          aria-disabled={false}
                          aria-label="Learn more"
                          disabled={false}
                          forwardRef={null}
                          href="https://docs.sentry.io/learn/releases/"
                          onClick={[Function]}
                          role="button"
                        >
                          <Component
                            aria-disabled={false}
                            aria-label="Learn more"
                            className="css-1ili4om-StyledButton edwq9my0"
                            forwardRef={null}
                            href="https://docs.sentry.io/learn/releases/"
                            onClick={[Function]}
                            role="button"
                          >
                            <a
                              aria-disabled={false}
                              aria-label="Learn more"
                              className="css-1ili4om-StyledButton edwq9my0"
                              href="https://docs.sentry.io/learn/releases/"
                              onClick={[Function]}
                              role="button"
                            >
                              <ButtonLabel
                                align="center"
                              >
                                <span
                                  className="css-zmpclt-ButtonLabel edwq9my1"
                                >
                                  Learn more
                                </span>
                              </ButtonLabel>
                            </a>
                          </Component>
                        </StyledButton>
                      </Button>
                    </forwardRef<Button>>
                  </div>
                </Action>
              </div>
            </Component>
          </EmptyMessage>
        </div>
      </Component>
    </Panel>
  </div>
</OrganizationRepositories>
`;

exports[`OrganizationRepositories renders without providers 1`] = `
<OrganizationRepositories
  itemList={Array []}
  params={
    Object {
      "orgId": "org-slug",
    }
  }
  repoConfig={Object {}}
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Repositories"
    >
      <SettingsPageHeading
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        noTitleStyles={false}
        title="Repositories"
      >
        <div
          className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        >
          <TitleAndActions>
            <div
              className="css-ifzfc5-TitleAndActions e1uay4fd0"
            >
              <Title
                styled={false}
              >
                <div
                  className="css-u2ls9d-Title e1uay4fd1"
                >
                  <HeaderTitle>
                    <h4
                      className="css-1bosio6-HeaderTitle eqkydle2"
                    >
                      Repositories
                    </h4>
                  </HeaderTitle>
                </div>
              </Title>
            </div>
          </TitleAndActions>
        </div>
      </SettingsPageHeading>
    </StyledSettingsPageHeading>
    <AlertLink
      openInNewTab={false}
      priority="warning"
      size="normal"
      to="/settings/org-slug/integrations/"
      withoutMarginBottom={false}
    >
      <StyledLink
        openInNewTab={false}
        priority="warning"
        size="normal"
        to="/settings/org-slug/integrations/"
        withoutMarginBottom={false}
      >
        <Component
          className="css-1bza080-StyledLink e1ylhppg0"
          openInNewTab={false}
          priority="warning"
          size="normal"
          to="/settings/org-slug/integrations/"
          withoutMarginBottom={false}
        >
          <Link
            className="css-1bza080-StyledLink e1ylhppg0"
            to="/settings/org-slug/integrations/"
          >
            <Anchor
              className="css-1bza080-StyledLink e1ylhppg0"
              href="/settings/org-slug/integrations/"
            >
              <a
                className="e1ylhppg0 css-1ku03mk-Anchor-StyledLink e18jdd0v0"
                href="/settings/org-slug/integrations/"
              >
                <AlertLinkText>
                  <div
                    className="css-o9emef-AlertLinkText e1ylhppg3"
                  >
                    Want to add a repository to start tracking commits? Install or configure your version control integration here.
                  </div>
                </AlertLinkText>
                <IconLink>
                  <span
                    className="css-1nl5kog-IconWrapper-IconLink e1ylhppg2"
                  >
                    <IconChevron
                      direction="right"
                    >
                      <EmotionCssPropInternal
                        __EMOTION_LABEL_PLEASE_DO_NOT_USE__="IconChevron"
                        __EMOTION_TYPE_PLEASE_DO_NOT_USE__={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "propTypes": Object {
                              "color": [Function],
                              "size": [Function],
                              "viewBox": [Function],
                            },
                            "render": [Function],
                          }
                        }
                        css={
                          Object {
                            "map": undefined,
                            "name": "72rehw-IconChevron",
                            "next": undefined,
                            "styles": "transform:rotate(90deg);;label:IconChevron;",
                            "toString": [Function],
                          }
                        }
                      >
                        <ForwardRef(SvgIcon)
                          className="css-72rehw-IconChevron"
                        >
                          <svg
                            className="css-72rehw-IconChevron"
                            fill="currentColor"
                            height="16px"
                            viewBox="0 0 16 16"
                            width="16px"
                          >
                            <path
                              d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
                            />
                          </svg>
                        </ForwardRef(SvgIcon)>
                      </EmotionCssPropInternal>
                    </IconChevron>
                  </span>
                </IconLink>
              </a>
            </Anchor>
          </Link>
        </Component>
      </StyledLink>
    </AlertLink>
    <div
      className="m-b-2"
    >
      <TextBlock>
        <div
          className="css-1j3tvli-TextBlock e1x1lar10"
        >
          Connecting a repository allows Sentry to capture commit data via webhooks. This enables features like suggested assignees and resolving issues via commit message. Once you've connected a repository, you can associate commits with releases via the API.
           
          <span
            key="5"
          >
            <span
              key="0"
            >
              See our 
            </span>
            <a
              href="https://docs.sentry.io/learn/releases/"
              key="2"
            >
              <span
                key="1"
              >
                documentation
              </span>
            </a>
            <span
              key="3"
            >
               for more details.
            </span>
          </span>
        </div>
      </TextBlock>
    </div>
    <Panel>
      <Component
        className="css-ietoyz-Panel e119nu470"
      >
        <div
          className="css-ietoyz-Panel e119nu470"
        >
          <EmptyMessage
            action={
              <ForwardRef
                href="https://docs.sentry.io/learn/releases/"
              >
                Learn more
              </ForwardRef>
            }
            description="Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message."
            icon={<ForwardRef(IconCommit) />}
            title="Sentry is better with commit data"
          >
            <Component
              action={
                <ForwardRef
                  href="https://docs.sentry.io/learn/releases/"
                >
                  Learn more
                </ForwardRef>
              }
              className="css-1qddu1g-EmptyMessage-EmptyMessage e1h3yfdx0"
              description="Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message."
              icon={<ForwardRef(IconCommit) />}
              title="Sentry is better with commit data"
            >
              <div
                className="css-1qddu1g-EmptyMessage-EmptyMessage e1h3yfdx0"
                data-test-id="empty-message"
              >
                <IconWrapper>
                  <div
                    className="css-oufmym-IconWrapper e1h3yfdx1"
                  >
                    <IconCommit>
                      <ForwardRef(SvgIcon)>
                        <svg
                          fill="currentColor"
                          height="16px"
                          viewBox="0 0 16 16"
                          width="16px"
                        >
                          <path
                            d="M8,11.91A3.91,3.91,0,1,1,11.91,8,3.91,3.91,0,0,1,8,11.91ZM8,5.59A2.41,2.41,0,1,0,10.41,8,2.41,2.41,0,0,0,8,5.59Z"
                          />
                          <path
                            d="M15.23,8.75H11.16a.75.75,0,0,1,0-1.5h4.07a.75.75,0,0,1,0,1.5Z"
                          />
                          <path
                            d="M4.84,8.75H.77a.75.75,0,1,1,0-1.5H4.84a.75.75,0,0,1,0,1.5Z"
                          />
                        </svg>
                      </ForwardRef(SvgIcon)>
                    </IconCommit>
                  </div>
                </IconWrapper>
                <Title>
                  <h1
                    className="css-1ybq3tl-Title e1h3yfdx2"
                  >
                    Sentry is better with commit data
                  </h1>
                </Title>
                <Description>
                  <div
                    className="css-1olcd3h-TextBlock-Description e1h3yfdx3"
                  >
                    Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
                  </div>
                </Description>
                <Action>
                  <div
                    className="css-1li1qzt-Action e1h3yfdx4"
                  >
                    <forwardRef<Button>
                      href="https://docs.sentry.io/learn/releases/"
                    >
                      <Button
                        align="center"
                        disabled={false}
                        forwardRef={null}
                        href="https://docs.sentry.io/learn/releases/"
                      >
                        <StyledButton
                          aria-disabled={false}
                          aria-label="Learn more"
                          disabled={false}
                          forwardRef={null}
                          href="https://docs.sentry.io/learn/releases/"
                          onClick={[Function]}
                          role="button"
                        >
                          <Component
                            aria-disabled={false}
                            aria-label="Learn more"
                            className="css-1ili4om-StyledButton edwq9my0"
                            forwardRef={null}
                            href="https://docs.sentry.io/learn/releases/"
                            onClick={[Function]}
                            role="button"
                          >
                            <a
                              aria-disabled={false}
                              aria-label="Learn more"
                              className="css-1ili4om-StyledButton edwq9my0"
                              href="https://docs.sentry.io/learn/releases/"
                              onClick={[Function]}
                              role="button"
                            >
                              <ButtonLabel
                                align="center"
                              >
                                <span
                                  className="css-zmpclt-ButtonLabel edwq9my1"
                                >
                                  Learn more
                                </span>
                              </ButtonLabel>
                            </a>
                          </Component>
                        </StyledButton>
                      </Button>
                    </forwardRef<Button>>
                  </div>
                </Action>
              </div>
            </Component>
          </EmptyMessage>
        </div>
      </Component>
    </Panel>
  </div>
</OrganizationRepositories>
`;
